# IN4150

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run_A.sh  run_dolev.sh  run_echo.sh  run_election.sh
config/: dolev.yaml
messages/: dolev.yaml
src/: da_types.py  run.py  tmp.py  topo_generator.py  util.py
src/algorithms/: __init__.py  dolev.py  echo_algorithm.py  ring_election.py
topologies/: dolev.yaml  dolev3.yaml
